--- a/app/gameboy/src/index.css
+++ b/app/gameboy/src/index.css
@@ -1,6 +1,12 @@
-@tailwind base;
-@tailwind utilities;
+html {
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 
 body {
   user-select: none;
+  margin: 0;
+}
+
+button {
+  border: 0;
 }
