wip: static home page UI

--- a/app/gameboy/src/index.css
+++ b/app/gameboy/src/index.css
@@ -1,5 +1,6 @@
 html {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 18px;
 }
 
 body {
