feat: use semantic HTML tag

--- a/app/gameboy/src/index.css
+++ b/app/gameboy/src/index.css
@@ -1,5 +1,6 @@
 html {
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 body {
@@ -9,4 +10,11 @@ body {
 
 button {
   border: 0;
+}
+
+ol,
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
